# ezexec-rust

./: Cargo.toml  README.md
src/: builder.rs  capturing_executor.rs  error.rs  lib.rs  lookup.rs  transparent_executor.rs
tests/: build.rs  shell-ls.rs
